<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:id="@+id/nodeActionLabelValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Node #"
            />
<!--        <TextView-->
<!--            android:id="@+id/nodeActionLabelParent"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="16sp"-->
<!--            android:text="Parent"-->
<!--            />-->
<!--        <TextView-->
<!--            android:id="@+id/nodeActionLabelLeft"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="16sp"-->
<!--            android:text="Left child" />-->
<!--        <TextView-->
<!--            android:id="@+id/nodeActionLabelRight"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="16sp"-->
<!--            android:text="Right child" />-->
<!--        <TextView-->
<!--            android:id="@+id/nodeActionLabelHeight"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="16sp"-->
<!--            android:text="Height"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/nodeActionDelete"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:textAllCaps="false"
                android:background="@drawable/homepage_button"
                android:textColor="@color/textHomepageButtons"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/nodeActionCancel"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:textAllCaps="false"
                android:background="@drawable/homepage_button"
                android:textColor="@color/textHomepageButtons"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>