...
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/bstButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/homepage_button"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="Binary Search Tree"
                    android:textAllCaps="false"
                    android:textColor="@color/textHomepageButtons"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageButton
...
